# shorts-generator

./: .dockerignore  .gitignore  .pre-commit-config.yaml  Dockerfile  LICENSE  Makefile  README.md  cli.py  config.env.example  docker-compose.yml  install.py  install_models.py  main.py  pyproject.toml  requirements-dev.txt  requirements.txt  run_dashboard.py  setup.py  simple_dashboard.py  simple_puppy_test.py  start.py  test_advanced_puppy.py  test_system.py
.github/workflows/: ci.yml
agents/: audio_agent.py  content_agent.py  upload_agent.py  video_agent.py
config/: settings.py
tests/: __init__.py  test_basic.py
utils/: content_validator.py  database.py  file_manager.py  logger.py  notifications.py  rate_limiter.py  scheduler.py
web/: dashboard.py
web/static/css/: dashboard.css
web/static/js/: dashboard.js
web/templates/: dashboard.html
